Updated teams to also support organisations, fixed makerfile and seed_db
