# app/models.py
@@ -37,6 +37,7 @@ class Team(db.Model):
     id = db.Column(db.Integer, primary_key=True)
     name = db.Column(db.String(100), nullable=False)
     number = db.Column(db.Integer, nullable=True)
+    organization = db.Column(db.String(120), nullable=True, index=True)
 
     # relationships
     rfid_card = db.relationship(
